--- a/configure.ac
+++ b/configure.ac
@@ -23,12 +23,11 @@ AC_INIT([mate-menus],
 AC_PREREQ(2.62)
 AC_COPYRIGHT([Copyright (C) 2022 Libre MATE])
 AC_CONFIG_SRCDIR(libmenu/matemenu-tree.h)
-AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-xz check-news])
-m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz silent-rules check-news])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADERS(config.h)
-
 AM_MAINTAINER_MODE
+
 MATE_MAINTAINER_MODE_DEFINES
 MATE_DEBUG_CHECK([no])
 MATE_COMPILE_WARNINGS
