--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,8 @@ AC_INIT([mate-menus],
 AC_PREREQ(2.62)
 AC_COPYRIGHT([Copyright (C) 2022 Libre MATE])
 AC_CONFIG_SRCDIR(libmenu/matemenu-tree.h)
-AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz silent-rules check-news])
+AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz check-news])
+AM_SILENT_RULES([yes])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADERS(config.h)
 AM_MAINTAINER_MODE
